# chitchat

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.lint.yaml  docker-compose.test.yaml  docker-compose.watch.yaml  docker-compose.yaml  init.sql
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.lint  Dockerfile.test  Dockerfile.watch  Makefile
backend/src/: main.rs  messages.rs  websocket.rs
frontend/: .dockerignore  Dockerfile  Dockerfile.lint  Makefile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/components/: AppColor.vue  AppSnackbar.vue  AppTheme.vue  MessageBoard.vue  MessageInput.vue
frontend/src/plugins/: vuetify.ts
frontend/src/store/: actions.ts  state.ts
postgres/: Dockerfile  Makefile  init.sql
src/: database.rs  main.rs  messages.rs  users.rs
vue/: package-lock.json  package.json  vue.config.js
vue/public/: index.html
vue/src/: App.vue  store.ts
vue/src/components/: AppUser.vue
vue/src/store/: actions.ts  mutations.ts
